fixed chrome selection color for foolfuuka-midnight theme - see http://stackoverflow.com/questions/7224445/css3-selection-behaves-differently-in-ff-chrome for details

--- a/assets/themes/foolz/foolfuuka-theme-foolfuuka/assets/style.less
+++ b/assets/themes/foolz/foolfuuka-theme-foolfuuka/assets/style.less
@@ -979,7 +979,7 @@ input[type="radio"], input[type="checkbox"] {
 		background-color:#757575 !important;
 	}
 	::selection {
-		background-color:#757575 !important;
+		background:rgba(117,117,117,0.996)!important;
 	}
 	.container {
 		background:#000000;
